--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
         android:background="@drawable/bg_btn_shape_login"
         android:textColor="@color/white"
         android:textSize="16sp"
