--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,4 +27,13 @@
         android:textSize="16sp"
         android:text="发送验证码" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/getcode_btn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="Button" />
+
 </RelativeLayout>
