--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,29 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="50dp"
         android:layout_marginLeft="20dp"
-        android:background="@drawable/bg_btn_shape_login"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:text="发送验证码" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/getcode_btn"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="31dp"
-        android:text="Button" />
+        android:background="@drawable/bg_btn_shape_login"
+        android:text="发送验证码"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
 </RelativeLayout>
